include_HEADERS = Attribute.h AttributeSet.h Cluster.h DotWriter.h Edge.h Enums.h Graph.h Idable.h IdManager.h Node.h RootGraph.h Subgraph.h Util.h
lib_LTLIBRARIES = libdotwriter.la
libdotwriter_la_SOURCES = AttributeSet.cpp Cluster.cpp Edge.cpp Enums.cpp Graph.cpp IdManager.cpp Node.cpp RootGraph.cpp Subgraph.cpp Util.cpp
